--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1263,8 +1263,8 @@ footer {
     font-family: var(--font-main);
     transition: all 0.3s ease;
     cursor: pointer;
-    appearance: none;
     -webkit-appearance: none;
+    appearance: none;
 }
 
 .form-select-group select:focus {
@@ -1859,6 +1859,7 @@ footer {
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease;
+    -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
 }
 
